[gd_scene load_steps=16 format=3 uid="uid://c803cv0f27fj5"]

[ext_resource type="Script" uid="uid://b6tux5s71uova" path="res://Scenes/Mob/gran_base.gd" id="1_lvbj6"]
[ext_resource type="Texture2D" uid="uid://dnx4yp2bknlio" path="res://Sprites/all_mob.png" id="2_ig66h"]
[ext_resource type="Script" uid="uid://c6q3k6qj47edh" path="res://Scripts/mob_state_machine.gd" id="3_2myln"]
[ext_resource type="Script" uid="uid://bk61f4ghosjqr" path="res://Scripts/gran_wander_state.gd" id="3_3eyfy"]
[ext_resource type="Script" uid="uid://b5h3k2u2m6tja" path="res://Scripts/gran_chase_state.gd" id="4_dcux6"]
[ext_resource type="Script" uid="uid://cq3v2mm2pj11m" path="res://Scripts/gran_idle_state.gd" id="5_g168d"]
[ext_resource type="Script" uid="uid://dsiekdotkk7r7" path="res://Scripts/gran_home_state.gd" id="6_1rxgx"]
[ext_resource type="Texture2D" uid="uid://bip5gnoro2qnj" path="res://Sprites/player shadow.PNG" id="8_81ukc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0w8w2"]
radius = 16.0312

[sub_resource type="Animation" id="Animation_qu1vh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllMob:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerShadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_7d73w"]
resource_name = "edna_idle"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_o3h3g"]
resource_name = "edna_move"
length = 0.4
loop_mode = 1
step = 0.05

[sub_resource type="Animation" id="Animation_qxjof"]
resource_name = "gran_idle"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllMob:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerShadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_wdmlv"]
resource_name = "gran_move"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllMob:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerShadow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5qaxx"]
_data = {
&"RESET": SubResource("Animation_qu1vh"),
&"edna_idle": SubResource("Animation_7d73w"),
&"edna_move": SubResource("Animation_o3h3g"),
&"gran_idle": SubResource("Animation_qxjof"),
&"gran_move": SubResource("Animation_wdmlv")
}

[node name="MobGran" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 7
motion_mode = 1
script = ExtResource("1_lvbj6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_0w8w2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_5qaxx")
}

[node name="MobStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("3_2myln")
state = NodePath("MobWanderState")

[node name="MobWanderState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("actor", "vision_cast")]
script = ExtResource("3_3eyfy")
actor = NodePath("../..")
vision_cast = NodePath("../../RayCast2D")

[node name="MobChaseState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("actor", "vision_cast")]
script = ExtResource("4_dcux6")
actor = NodePath("../..")
vision_cast = NodePath("../../RayCast2D")

[node name="MobIdleState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("5_g168d")
actor = NodePath("../..")

[node name="MobHomeState" type="Node" parent="MobStateMachine" node_paths=PackedStringArray("actor", "vision_cast")]
script = ExtResource("6_1rxgx")
actor = NodePath("../..")
vision_cast = NodePath("../../RayCast2D")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 87)

[node name="AllMob" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -1)
texture = ExtResource("2_ig66h")
hframes = 8
vframes = 6
frame = 17

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PlayerShadow" type="Sprite2D" parent="."]
position = Vector2(-1, 1)
texture = ExtResource("8_81ukc")
hframes = 8
frame = 2
